--- a/views/asignatura/show.jade
+++ b/views/asignatura/show.jade
@@ -140,6 +140,9 @@ block content
                                 br
 
                                 legend Horario asignado a la materia
+                                    a(href="/horario/new/#{asignatura.id}").btn.btn-primary.btn-xs.pull-right
+                                        i.fa.fa-plus
+                                        |&nbsp; Agregar Horario de clase
                                 .list-group
                                     each horario in horarios
                                         .list-group-item
@@ -149,7 +152,7 @@ block content
                                             .list-group-item-text
                                                 h4 #{horario.Lugar}
                                             .list-group-item-text.text-right
-                                                a(href="/horario/#{horario.id}/edit").btn.btn-default.btn-xs
+                                                a(href="/horario/edit/#{horario.id}/#{asignatura.id}").btn.btn-default.btn-xs
                                                     i.fa.fa-edit
                                                     | &nbsp; Editar
                                                 a(href="/horario/#{horario.id}/delete").btn.btn-danger.btn-xs.margin-left-1
