--- a/views/postgrado/show.jade
+++ b/views/postgrado/show.jade
@@ -97,7 +97,7 @@ block content
                     .panel-body
                         p.lead Lista de Interezados que desean realizar el postgrado y obtener informacion a cerca del mismo
 
-                        .scroll-list
+                        .scroll-list-x
                             -if(inscritos[0]){
                                 table.table.table-hover.table-striped
                                     - count=1
